# adi-tasks-plugin

./: Cargo.toml  plugin.toml
src/: lib.rs
