[package]
name = "adi-tasks-plugin"
version = "0.8.3"
edition = "2021"
license = "BSL-1.0"
description = "ADI Tasks plugin providing MCP tools for task management"
authors = ["ADI Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lib-plugin-abi = { path = "../lib-plugin-abi" }
adi-tasks-core = { path = "../adi-tasks-core" }
abi_stable = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
